@@ -1,3 +1,7 @@
+2009-02-22	Konstantin V. Arkhipov
+
+	* core/Types/Range.class.php: splitted into IntegerRange and
+	NumericRange.
 
 2009-07-02	Denis M. Gabaidulin
 
